tdf#135991 fix unexpected hidden RTL sections.

SwLayoutFrame::MakeAll tried to manipulate the height instead of the
width for SwCellFrame and SwColumnFrame ( i.e. when IsNeghbourFrame()
is true. ), by selecting a wrong SwRectFn.

SwRectFn fnRect = bVert == IsNeighbourFrame() ? fnRectHori :
( IsVertLR() ? (IsVertLRBT() ? fnRectVertL2RB2T : fnRectVertL2R) : fnRectVert );

It doesn't make sense to select among fnRectVertL2RBT, fnRectVertL2R,
and fnRectVert if the layout is horizontal.
The frame position got a negative top value and make the frame invisble.

Check he following commit for reference:

commit c90b6806d18c8ed25015eb2ecdff13c7bab2572d
Author: Andreas Martens <ama@openoffice.org>
Date:   Wed Sep 19 07:45:10 2001 +0000

    Chg: Moving vertical help functions from SwFrm to SwRect

Change-Id: I2f6da9cdbc2947de95a6fb9ce8fa94a79360c83a